// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildUserGroupRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "zendesk_group:5812638858781",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2022-07-06T18:46:13Z",
            "default": true,
            "deleted": false,
            "description": "",
            "id": 5812638858781,
            "is_public": true,
            "name": "Support",
            "updated_at": "2022-07-06T18:46:13Z",
            "url": "https://creativice.zendesk.com/api/v2/groups/5812638858781.json",
          },
        },
      ],
      "_type": "zendesk_group",
      "createdAt": "2022-07-06T18:46:13Z",
      "createdOn": undefined,
      "deleted": false,
      "description": "",
      "displayName": "Support",
      "id": "5812638858781",
      "name": "Support",
      "updatedAt": "2022-07-06T18:46:13Z",
      "url": "https://creativice.zendesk.com/api/v2/groups/5812638858781.json",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_user:5812665774109",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "created_at": "2022-07-06T18:46:17Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "customer@example.com",
            "external_id": null,
            "iana_time_zone": "Europe/Belgrade",
            "id": 5812665774109,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "The Customer",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": Object {
              "content_type": "image/png",
              "content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391.png",
              "deleted": false,
              "file_name": "profile_image_5812665774109_14239391.png",
              "height": 80,
              "id": 5812638919325,
              "inline": false,
              "mapped_content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391.png",
              "size": 10183,
              "thumbnails": Array [
                Object {
                  "content_type": "image/png",
                  "content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391_thumb.png",
                  "deleted": false,
                  "file_name": "profile_image_5812665774109_14239391_thumb.png",
                  "height": 32,
                  "id": 5812670476829,
                  "inline": false,
                  "mapped_content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391_thumb.png",
                  "size": 2331,
                  "url": "https://creativice.zendesk.com/api/v2/attachments/5812670476829.json",
                  "width": 32,
                },
              ],
              "url": "https://creativice.zendesk.com/api/v2/attachments/5812638919325.json",
              "width": 80,
            },
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": "requested",
            "time_zone": "Europe/Belgrade",
            "two_factor_auth_enabled": false,
            "updated_at": "2022-07-06T18:46:17Z",
            "url": "https://creativice.zendesk.com/api/v2/users/5812665774109.json",
            "user_fields": Object {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2022-07-06T18:46:17Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "The Customer",
      "email": "customer@example.com",
      "ianaTimeZone": "Europe/Belgrade",
      "id": "5812665774109",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "The Customer",
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391.png",
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Europe/Belgrade",
      "updatedAt": "2022-07-06T18:46:17Z",
      "url": "https://creativice.zendesk.com/api/v2/users/5812665774109.json",
      "username": "customer@example.com",
      "verified": false,
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_user:5812690998173",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "created_at": "2022-07-06T18:46:05Z",
            "custom_role_id": 5812670200733,
            "default_group_id": 5812638858781,
            "details": null,
            "email": "stefan@creativice.com",
            "external_id": null,
            "iana_time_zone": "Europe/Belgrade",
            "id": 5812690998173,
            "last_login_at": "2022-07-11T18:05:50Z",
            "locale": "en-US",
            "locale_id": 1,
            "moderator": true,
            "name": "Stefan Virag",
            "notes": null,
            "only_private_comments": false,
            "organization_id": 5812638859421,
            "phone": null,
            "photo": null,
            "report_csv": true,
            "restricted_agent": false,
            "role": "admin",
            "role_type": 4,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": null,
            "time_zone": "Europe/Belgrade",
            "two_factor_auth_enabled": null,
            "updated_at": "2022-07-11T18:05:50Z",
            "url": "https://creativice.zendesk.com/api/v2/users/5812690998173.json",
            "user_fields": Object {},
            "verified": true,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2022-07-06T18:46:05Z",
      "createdOn": undefined,
      "defaultGroupId": 5812638858781,
      "displayName": "Stefan Virag",
      "email": "stefan@creativice.com",
      "ianaTimeZone": "Europe/Belgrade",
      "id": "5812690998173",
      "locale": "en-US",
      "localeId": 1,
      "moderator": true,
      "name": "Stefan Virag",
      "organizationId": 5812638859421,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": false,
      "role": "admin",
      "shared": false,
      "suspended": false,
      "timeZone": "Europe/Belgrade",
      "updatedAt": "2022-07-11T18:05:50Z",
      "url": "https://creativice.zendesk.com/api/v2/users/5812690998173.json",
      "username": "stefan@creativice.com",
      "verified": true,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_group:5812638858781",
      "_key": "zendesk_group:5812638858781|has|zendesk_user:5812690998173",
      "_toEntityKey": "zendesk_user:5812690998173",
      "_type": "zendesk_group_has_user",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "zendesk_group",
    "zendesk_user",
    "zendesk_group_has_user",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchUsers should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_user:5812665774109",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "created_at": "2022-07-06T18:46:17Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "customer@example.com",
            "external_id": null,
            "iana_time_zone": "Europe/Belgrade",
            "id": 5812665774109,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "The Customer",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": Object {
              "content_type": "image/png",
              "content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391.png",
              "deleted": false,
              "file_name": "profile_image_5812665774109_14239391.png",
              "height": 80,
              "id": 5812638919325,
              "inline": false,
              "mapped_content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391.png",
              "size": 10183,
              "thumbnails": Array [
                Object {
                  "content_type": "image/png",
                  "content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391_thumb.png",
                  "deleted": false,
                  "file_name": "profile_image_5812665774109_14239391_thumb.png",
                  "height": 32,
                  "id": 5812670476829,
                  "inline": false,
                  "mapped_content_url": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391_thumb.png",
                  "size": 2331,
                  "url": "https://creativice.zendesk.com/api/v2/attachments/5812670476829.json",
                  "width": 32,
                },
              ],
              "url": "https://creativice.zendesk.com/api/v2/attachments/5812638919325.json",
              "width": 80,
            },
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": "requested",
            "time_zone": "Europe/Belgrade",
            "two_factor_auth_enabled": false,
            "updated_at": "2022-07-06T18:46:17Z",
            "url": "https://creativice.zendesk.com/api/v2/users/5812665774109.json",
            "user_fields": Object {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2022-07-06T18:46:17Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "The Customer",
      "email": "customer@example.com",
      "ianaTimeZone": "Europe/Belgrade",
      "id": "5812665774109",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "The Customer",
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": "https://creativice.zendesk.com/system/photos/5812638919325/profile_image_5812665774109_14239391.png",
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Europe/Belgrade",
      "updatedAt": "2022-07-06T18:46:17Z",
      "url": "https://creativice.zendesk.com/api/v2/users/5812665774109.json",
      "username": "customer@example.com",
      "verified": false,
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_user:5812690998173",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "created_at": "2022-07-06T18:46:05Z",
            "custom_role_id": 5812670200733,
            "default_group_id": 5812638858781,
            "details": null,
            "email": "stefan@creativice.com",
            "external_id": null,
            "iana_time_zone": "Europe/Belgrade",
            "id": 5812690998173,
            "last_login_at": "2022-07-11T17:40:44Z",
            "locale": "en-US",
            "locale_id": 1,
            "moderator": true,
            "name": "Stefan Virag",
            "notes": null,
            "only_private_comments": false,
            "organization_id": 5812638859421,
            "phone": null,
            "photo": null,
            "report_csv": true,
            "restricted_agent": false,
            "role": "admin",
            "role_type": 4,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": null,
            "time_zone": "Europe/Belgrade",
            "two_factor_auth_enabled": null,
            "updated_at": "2022-07-11T17:40:44Z",
            "url": "https://creativice.zendesk.com/api/v2/users/5812690998173.json",
            "user_fields": Object {},
            "verified": true,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2022-07-06T18:46:05Z",
      "createdOn": undefined,
      "defaultGroupId": 5812638858781,
      "displayName": "Stefan Virag",
      "email": "stefan@creativice.com",
      "ianaTimeZone": "Europe/Belgrade",
      "id": "5812690998173",
      "locale": "en-US",
      "localeId": 1,
      "moderator": true,
      "name": "Stefan Virag",
      "organizationId": 5812638859421,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": false,
      "role": "admin",
      "shared": false,
      "suspended": false,
      "timeZone": "Europe/Belgrade",
      "updatedAt": "2022-07-11T17:40:44Z",
      "url": "https://creativice.zendesk.com/api/v2/users/5812690998173.json",
      "username": "stefan@creativice.com",
      "verified": true,
    },
  ],
  "collectedRelationships": Array [],
  "encounteredTypes": Array [
    "zendesk_user",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 0,
}
`;
